--- a/public/css/home.css
+++ b/public/css/home.css
@@ -54,6 +54,25 @@
   margin-top:1rem;
 }
 
+.card .green-button {
+  background-color: green;
+  color: white;
+}
+
+.card .red-button {
+  background-color: rgb(213, 65, 65); /* Use an appropriate shade of red */
+  color: #fff; /* Set text color to white */
+  border: none; /* Remove button border */
+  border-radius: 4px; /* Add some border radius for rounded edges */
+  cursor: pointer; /* Add a pointer cursor to indicate interactivity */
+}
+
+.input-boxes {
+  border-radius: 4px; /* adjust the value as per your need */
+  padding: 5.5px;
+  border: 1px solid #ccc;
+}
+
 @media screen and (min-width: 768px) {
   .column {
     flex-basis: calc(50% - 10px);
