--- a/views/formView.ejs
+++ b/views/formView.ejs
@@ -24,8 +24,18 @@
         </div>
         <div class="body description">
             <h4>Description</h4>
-        </div>
+            <% if(!form.description) { %>
+                <p class="gray-texts">No description provided</p>
+            <% } %>
             <p><%= form.description %></p>
+        </div>
+        <div>
+            <% if(role == 'Student') { %>
+            <% if(messages) { %>
+                <p><%= messages %></p>
+                <% } %>
+            <% } %>
+        </div>
             <% if(role == 'Student') { %>
             <form action="/student/activities/submit" method="POST" enctype="multipart/form-data">
                 <div class="form-control upload-file">
@@ -38,5 +48,7 @@
               </form>
             <% } %>
     </div>
+
+      
 </body>
 </html>
