--- a/views/view.ejs
+++ b/views/view.ejs
@@ -19,6 +19,7 @@
           <% if(subGrp.capstoneTitle) { %>
           <h1><%= subGrp.capstoneTitle %></h1>
           <% } %>
+          <% } %>
           <% if(role == "Student") { %>
             <h1><%= group.capstoneTitle %></h1>
             <% } %>
@@ -37,7 +38,7 @@
         <% } %>
         
         <div class="container-top">
-            <div class="pdf-viewer">
+            <div class="pdf-viewer <% if(form.needsApproval) {'center'} %>">
                 <iframe id="pdf-iframe" src="<%= submission.filePath %>" frameborder="0" width="100%" height="500px"></iframe>
                 <% console.log(submission.filePath) %>
             </div>
