--- a/views/auth/faculty-register.ejs
+++ b/views/auth/faculty-register.ejs
@@ -12,7 +12,7 @@
         <div>
     </header>
          <center>
-            <h1>Register your account </h1>
+            <h1>Register as Faculty </h1>
         </center>
     <div class="container center">
         <div class="grayline"></div>
