Now Uses Employee ID for Assigning Roles

--- a/views/auth/faculty-register.ejs
+++ b/views/auth/faculty-register.ejs
@@ -31,7 +31,11 @@
             </div>
             <div class="form-control">
                 <h4>Email Address</h4>
-                <input type="text" name="email">
+                <input type="email" name="email">
+            </div>
+            <div class="form-control">
+                <h4>Employee ID</h4>
+                <input type="number" name="employeeId">
             </div>
             <div class="grayline1"></div>
             <div class="form-control">
