--- a/views/faculty-activities/roles.ejs
+++ b/views/faculty-activities/roles.ejs
@@ -54,7 +54,7 @@
             <% faculty.forEach(member => { %>
                 <div class="item-container">
                     <div class="item-columns">
-                        <h4>ID: <%= member.id %></h4>
+                        <h4>ID: <%= member.employee_id %></h4>
                     </div>
                     <div class="item-columns">
                         <p><%= member.firstName + ' ' + member.lastName %></p>
