--- a/views/auth/student-register.ejs
+++ b/views/auth/student-register.ejs
@@ -22,6 +22,10 @@
         <% } %>
         <form action="/auth/register" method="POST">
             <div class="form-control">
+                <h4>Student Number</h4>
+                <input type="number" name="studentId">
+            </div>
+            <div class="form-control">
                 <h4>First Name</h4>
                 <input type="text" name="firstName">
             </div>
