--- a/views/archiveView.ejs
+++ b/views/archiveView.ejs
@@ -23,26 +23,63 @@
             <% } %>
         </div>
         <div class="container-top">
-            <div class="members">
-            <h4>Members</h4>
+            <div class="column">
+            <div class="roles" id="pm">
+                <h4>Members</h4>
                 <% if(members.length > 0) { %>
-                    <% members.forEach(member => { %>
-                    <p><%= member.firstName + ' ' + member.lastName %></p>
+                    <% members.forEach((member, i) => { %>
+                    <div class="flex">
+                        <div class="item-columns" id="id">
+                            <p class="gray-texts"><%= allMembers[i].studentId %></p>
+                        </div>
+                        <div class="item-columns">
+                            <p><%= member.firstName + ' ' + member.lastName %></p>
+                        </div>
+                        <div class="item-columns" id="role">
+                            <% if(allMembers[i].role){ %>
+                            <p class="gray-texts"><%= allMembers[i].role.toUpperCase() %></p>
+                            <% } %>
+                        </div>
+                    </div>
                     <% }) %>
                 <% } else { %>
                     <p class="gray-texts">No members yet</p>
                     <% } %>
             </div>
-            <div class="adviser">
+            </div>
+            
+            <div class="column">
                 <h4>Adviser</h4>
                 <% if(adviser) { %>
                     <p><%= adviser.firstName + ' ' + adviser.lastName %></p>
                   <% } else { %>
                     <p class="gray-texts">No Adviser Yet</p>
                   <% } %>
-                  
-                  
             </div>
+            <% if(role == 'Student') { %>
+            <div class="assign-roles">
+                <h4 class="caret-down">Assign roles</h4>
+                <p class="gray-texts">(Input Student ID)</p>
+                <% if(student.groupId == group.id) { %>
+                <div class="column-body" id="roles">
+                <form action="/student/group/role" method="POST">
+                    <div class="form-control">
+                        <input type="number" name="studentId" class="input-boxes">
+                        <label for="role">Role:</label>
+                        <select name="role" id="role" class="input-boxes">
+                          <option value="project-manager">Project Manager</option>
+                          <option value="quality-assurance">Quality Assurance</option>
+                          <option value="front-end-developer">Front-end Developer</option>
+                          <option value="back-end-developer">Back-end Developer</option>
+                        </select>
+                        <button type="submit" class="submit-buttons">Submit</button>
+                        <input type="hidden" value="<%= group.id %>" name="groupId">
+                    </div>
+                </form>
+                </div>
+                <% } %>
+            </div>
+            <% } %>
         </div>
         <div class="container-main">
             <h4>Documents</h4>
@@ -80,5 +117,14 @@
         </div>
     </div>
     <% } %>
-
+    <script>
+        function toggleRoles() {
+            var roles = document.getElementById("roles");
+            if (roles.style.display === "none") {
+                roles.style.display = "block";
+            } else {
+                roles.style.display = "none";
+            }
+        }
+    </script>
 </body>
