--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,10 @@
             <div class="card">
               <h4>Create Batch:</h4>
               <form action="/faculty/home" method="POST" id="batch-form-start">
-                <input type="text" name="name" class="input-boxes" required>
+                <label for="start">Start</label>
+                <input type="date" name="start" class="input-boxes" required>
+                <label for="end">End</label>
+                <input type="date" name="end" class="input-boxes" required>
                 <button type="submit" name="button" value="start" class="green-button">Start</button>
               </form>
             </div>
@@ -31,7 +34,7 @@
             <div class="card">
               <form action="/faculty/home" method="POST" id="batch-form-stop" onsubmit="return confirmRemove();">
                 <h4>Current Batch:</h4>
-                <p><%= batchName %></p>
+                <p><%= batchStart %> - <%= batchEnd %></p>
                 <button type="submit" name="button" value="stop" class="red-button">Stop</button>
               </form>
             </div>
