--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
       </div>
       <div class="row">
         <div class="column">
-          <% if(role == 'Faculty') { %>
+          <% if(role == 'faculty' || role == 'Faculty') { %>
           <% if(adminUser) { %>
           <% if(isBatchActive == false) { %>
             <div class="card">
