--- a/views/archiveView.ejs
+++ b/views/archiveView.ejs
@@ -97,6 +97,9 @@
                         <% if(submission.status == 'pending') { %>
                             <h3 class="yellow-texts"><%= submission.status.charAt(0).toUpperCase() + submission.status.slice(1) %></h3>
                         <% } %>  
+                        <% if(submission.status == 'rejected') { %>
+                            <h3 class="red-texts"><%= submission.status.charAt(0).toUpperCase() + submission.status.slice(1) %></h3>
+                        <% } %>  
                         </div>
                         <% if(role == 'Faculty') { %>
                         <form action="/faculty/activities/view/<%= submission.id %>" method="GET">
